[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revealhashed"
version = "0.3.0"
description = "Dump or analyze existing NTDS data, crack NT hashes with hashcat and match them to their corresponding user accounts."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "aslan emre aslan", email = "emre@zurrak.com" }]
keywords = ["ntds", "hashcat", "bloodhound", "pentest", "active-directory"]

dependencies = [
    "impacket>=0.11.0",
    "neo4j>=5.0",
]

[project.scripts]
revealhashed = "revealhashed.core:main"

[project.urls]
Homepage = "https://github.com/crosscutsaw/revealhashed-python"

[tool.setuptools.packages.find]
include = ["revealhashed*"]
